Quick Smoke with Cycles crashes Blender 2.93 alpha #86567

Closed
opened 2021-03-14 16:07:37 +01:00 by Patrick Busch · 9 comments
Contributor

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.72

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-14 12:41, hash: 448cb5d55b
Worked: (2.92 Stable and 2.83.13 LTS)
Caused by bbe6d44928

Short description of error
Quick Simulation smoke, with cycles, be it in CPU or GPU, Blender just closes without a notice.
Tried the same with 2.83.13 LTS as well as the 2.92 stable version, those do work as expected though.

system-info.txt

Exact steps for others to reproduce the error
Select the default cube and add the quick effect smoke. (everything left at default settings!)
Press space to see it work in solid mode.
Change to rendered mode (Eevee default) and test again, making sure that the simulation is working.
Reset to first frame and change renderer to Cycles, once you press space to start the simulation > Blender closes.
CPU or GPU, no difference.

Attached the system-info.txt from 2.93 master, in case it can help.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.72 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-14 12:41, hash: `448cb5d55b` Worked: (2.92 Stable and 2.83.13 LTS) Caused by bbe6d44928 **Short description of error** Quick Simulation smoke, with **cycles**, be it in **CPU** or **GPU**, Blender just closes without a notice. Tried the same with 2.83.13 LTS as well as the 2.92 stable version, those do work as expected though. [system-info.txt](https://archive.blender.org/developer/F9890945/system-info.txt) **Exact steps for others to reproduce the error** Select the default cube and add the quick effect smoke. (everything left at default settings!) Press space to see it work in solid mode. Change to rendered mode (Eevee default) and test again, making sure that the simulation is working. Reset to first frame and change renderer to Cycles, once you press space to start the simulation > Blender closes. CPU or GPU, no difference. Attached the system-info.txt from 2.93 master, in case it can help.
Author
Contributor

Added subscriber: @Xylvier

Added subscriber: @Xylvier
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Can confirm.
Author
Contributor

Attached the latest blender.crash.txt files, marked them with CPU and GPU as they sure are different, thing is the first frame of the simulation is rendering, just once pressing space, Blender disappears.
Also, in case I do not let the simulation first run in solid/Eevee mode, it seems Blender does not even get to write in the crash file.

blender.crash-CPU.txt blender.crash-GPU.txt

Hope this help.

Attached the latest blender.crash.txt files, marked them with CPU and GPU as they sure are different, thing is the first frame of the simulation is rendering, just once pressing space, Blender disappears. Also, in case I do not let the simulation first run in solid/Eevee mode, it seems Blender does not even get to write in the crash file. [blender.crash-CPU.txt](https://archive.blender.org/developer/F9892641/blender.crash-CPU.txt) [blender.crash-GPU.txt](https://archive.blender.org/developer/F9892642/blender.crash-GPU.txt) Hope this help.
Member

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Member
CC @kevindietrich

This issue was referenced by 96e60cc22c

This issue was referenced by 96e60cc22ca281cc68379e51a111afaf7fc0b718
Kévin Dietrich self-assigned this 2021-03-23 15:59:05 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86567
No description provided.